Fix styling on firefox browsers and made dark theme always default

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,12 @@
     --foreground: #ededed;
   }
 }
+@media (prefers-color-scheme: light) {
+  :root {
+    --background: #302f2f;
+    --foreground: #ededed;
+  }
+}
 
 body {
   background: var(--background);
